--- a/index.html
+++ b/index.html
@@ -2,65 +2,50 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>LAVENTI FRP SERVICES | خدمات تخطي الحسابات</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAVENTI FRP | مركز خدمات الملك</title>
     <style>
         body { background: #050505; color: gold; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; text-align: center; }
-        .container { background: #0a0a0a; border: 2px solid #1a1a1a; padding: 30px; border-radius: 20px; box-shadow: 0 0 30px rgba(255, 215, 0, 0.1); width: 90%; max-width: 500px; }
+        .container { background: #0a0a0a; border: 2px solid #1a1a1a; padding: 30px; border-radius: 20px; box-shadow: 0 0 30px rgba(255, 215, 0, 0.1); width: 90%; max-width: 500px; animation: fadeIn 1.5s ease; }
         .service-card { background: #111; border: 1px solid #333; padding: 15px; margin: 15px 0; border-radius: 12px; transition: 0.3s; }
-        .service-card:hover { border-color: gold; transform: translateY(-5px); }
-        h1 { font-size: 24px; margin-bottom: 10px; }
+        .service-card:hover { border-color: gold; transform: translateY(-5px); box-shadow: 0 5px 15px rgba(255, 215, 0, 0.1); }
+        h1 { font-size: 26px; margin-bottom: 5px; text-transform: uppercase; letter-spacing: 2px; }
         .price { font-size: 32px; font-weight: bold; color: #fff; margin: 10px 0; }
-        .btn-pay { background: gold; color: #000; border: none; padding: 15px 30px; font-size: 18px; font-weight: bold; border-radius: 10px; cursor: pointer; width: 100%; transition: 0.3s; }
-        .btn-pay:hover { background: #fff; box-shadow: 0 0 15px gold; }
-        .badge { background: #222; color: #0f0; padding: 5px 10px; border-radius: 5px; font-size: 12px; }
-        #lock-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 1000; }
-        input { background: #111; border: 1px solid gold; color: #fff; padding: 15px; text-align: center; font-size: 20px; border-radius: 10px; outline: none; }
-        .hidden { display: none; }
+        .btn-pay { background: linear-gradient(45deg, #ffd700, #ffae00); color: #000; border: none; padding: 15px 30px; font-size: 18px; font-weight: bold; border-radius: 10px; cursor: pointer; width: 100%; transition: 0.3s; margin-top: 10px; }
+        .btn-pay:hover { background: #fff; transform: scale(1.02); box-shadow: 0 0 20px gold; }
+        .badge { background: #222; color: #0f0; padding: 5px 15px; border-radius: 50px; font-size: 12px; display: inline-block; margin-bottom: 20px; border: 1px solid #0f0; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     </style>
 </head>
 <body>
 
-    <div id="lock-screen">
-        <h1 style="color: gold;">🔱 LAVENTI SECURE GATE 🔱</h1>
-        <p>أدخل كود الولاء للوصول إلى خدمات FRP</p>
-        <input type="password" id="king-pass" placeholder="كود المرور (1212)">
-        <br>
-        <button class="btn-pay" style="width: auto;" onclick="checkAccess()">فتح الخدمة</button>
-    </div>
-
-    <div id="main-app" class="container hidden">
-        <div class="badge">النظام متصل: KING-GENIUS-V10M</div>
-        <h1>🛠️ خدمات تخطي حساب جوجل (FRP)</h1>
-        <p style="color: #888;">اختر الخدمة المطلوبة لبدء التخطي التلقائي</p>
+    <div class="container">
+        <div class="badge">● النظام متصل بالخادم الملكي V10M</div>
+        <h1>🔱 LAVENTI FRP SERVICES 🔱</h1>
+        <p style="color: #888;">أهلاً بك في المركز المعتمد لتخطي حسابات جوجل</p>
 
         <div class="service-card">
-            <h3>Samsung FRP Unlocking</h3>
-            <p>دعم كافة الحمايات حتى 2026</p>
+            <h3 style="margin: 5px 0;">SAMSUNG FRP UNLOCK</h3>
+            <p style="font-size: 13px; color: #aaa;">دعم كافة الموديلات والحمايات 2026</p>
             <div class="price">10$</div>
         </div>
 
         <div class="service-card">
-            <h3>Xiaomi / Huawei / Oppo</h3>
-            <p>إزالة الحساب عبر التوكن المشفر</p>
+            <h3 style="margin: 5px 0;">MI / HUAWEI / OPPO</h3>
+            <p style="font-size: 13px; color: #aaa;">إزالة الحساب عبر التوكن السريع</p>
             <div class="price">15$</div>
         </div>
 
-        <button class="btn-pay" onclick="payNow()">💳 ارفع رصيد الملك وابدأ التخطي</button>
-        <p style="font-size: 11px; margin-top: 15px; color: #555;">بمجرد الدفع، سيتم إرسال KnoxKey التلقائي لجهازك.</p>
+        <button class="btn-pay" onclick="payNow()">💳 اشحن رصيد الملك وابدأ العمل</button>
+        
+        <p style="font-size: 11px; margin-top: 20px; color: #555;">
+            بمجرد الضغط على الدفع وإتمام العملية، سيتم تفعيل الخدمة لجهازك تلقائياً.
+        </p>
     </div>
 
     <script>
-        function checkAccess() {
-            if (document.getElementById('king-pass').value === "1212") {
-                document.getElementById('lock-screen').classList.add('hidden');
-                document.getElementById('main-app').classList.remove('hidden');
-            } else {
-                alert("❌ كود خاطئ! الملك فقط من يملك المفتاح.");
-            }
-        }
-
         function payNow() {
-            // توجيه الزبون لـ PayPal الملك
+            // توجيه مباشر لـ PayPal الملك محمد حسن
             window.location.href = "https://paypal.me/hassan182?locale.x=ar_EG&country.x=JO";
         }
     </script>
