--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAVENTI PRESTIGE | الملك محمد حسن</title>
+    <title>LAVENTI PRESTIGE | االمهندس محمد حسن</title>
     <style>
         :root { --gold: #ffd700; --dark: #050505; }
         body { background: var(--dark); color: var(--gold); font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; padding: 20px; display: flex; justify-content: center; align-items: center; min-height: 100vh; text-align: center; }
